--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         
         <script src="js/jquery.min.js"></script>
 		
-        <!-- Maps API Javascript -->
-        <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+        <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAwgT56V8QmSF6zCevmPy8X1dRXBbOCVrs"></script>
  
         <!-- Arquivo de inicialização do mapa -->
 		<script src="js/mapa.js"></script>
